<resources>
    <string name="app_name">Bibliothèque</string>

    <string name="ok">O.K.</string>

    <!-- Main activity -->
    <string name="createBook">Créer un livre</string>
    <string name="detailsBook">Voir les détails</string>
    <string name="viewBookList">Voir la liste des livres</string>
    <string name="scanBook">Scanner un livre</string>


    <string name="creer">Créer</string>
    <string name="chercher">Parcourir</string>
    <string name="rechercher">Chercher</string>

    <!-- Book properties -->
    <string name="title">Titre</string>
    <string name="author">Auteur</string>
    <string name="isbn">ISBN</string>
    <string name="image">Image</string>
    <string name="details">Description</string>
    <string name="summary">Résumé</string>
    <string name="editor">Editeur</string>
    <string name="serie">Série</string>
    <string name="numSerie">N°série</string>
    <string name="year">Année</string>

    <string name="enterAuthor">Entrez un auteur</string>
    <string name="enterTitle">Entrez un titre</string>
    <string name="enterIsbn">Entrez un ISBN</string>
    <string name="enterDetails">Entrez une decription</string>
    <string name="enterEditor">Entrez un editeur</string>
    <string name="enterSerie">Entrez une série</string>
    <string name="enterNumSerie">Entrez le numéro dans la série</string>
    <string name="enterYear">Entrez une année</string>


    <string name="title_activity_view_book">Consulter les livres</string>
    <string name="confirm_creation">Le livre a été créé</string>
    <string name="creation_book">Création du livre</string>
    <string name="menu_edit">Modifier</string>
    <string name="voirDetails">Voir les détails</string>
    <string name="suppress">Supprimer</string>
    <string name="BookSuppressed">Livre supprimé</string>
    <string name="title_activity_filter_menu">FilterMenu</string>


    <string name="filtrer">Filtrer par</string>
    <string name="title_activity_scan_book">ScanBook</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_title">Veuillez entrer un titre pour votre livre</string>
    <string name="no_title">Pas de titre</string>
</resources>
